--- a/index.html
+++ b/index.html
@@ -1,40 +1,337 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="Thư viện Slider tối ưu dành cho nhà phát triển. Sạch sẽ, hiện đại và rất nhẹ."
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- GG Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Reset CSS -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- CSS Main -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <!-- Thêm theme Okaidia cho PrismJS -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.css"
       rel="stylesheet"
     />
-    <!-- RESET CSS -->
-    <link rel="stylesheet" href="./assets/css/reset.css" />
-    <!-- CSS STYLES-->
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <!-- CSS LOPZA-->
-    <link rel="stylesheet" href="./src/lopza.css" />
     <title>Lopza</title>
   </head>
-  <body style="height: 3000px">
-    <h2>Lopza APP</h2>
+  <body>
+    <!-- Hero Section -->
+    <section class="hero">
+      <h1>Lopza.js</h1>
+      <p>
+        Thư viện Slider tối ưu dành cho nhà phát triển. Sạch sẽ, hiện đại và tối
+        giản.
+      </p>
+      <a href="#setting" class="cta-button">Cài đặt</a>
+    </section>
 
-    <!-- Slide 2 -->
-    <div class="box-container">
-      <div id="my-sli2"></div>
-    </div>
+    <!-- Content Sections -->
+    <section class="wrap-content">
+      <!-- Introduction -->
+      <div class="content-card">
+        <h2 data-title="#1">Giới thiệu</h2>
+        <p>
+          <strong>Lopza.js</strong> là một thư viện JavaScript thuần (Vanilla
+          JS) mạnh mẽ, được thiết kế đặc biệt để tạo slider mượt mà và linh hoạt
+          trong giao diện người dùng. Lopza.js cung cấp cách đơn giản để thiết
+          lập và điều khiển carousel, slideshow, và image slider trong bất kỳ
+          ứng dụng web nào, hỗ trợ nhiều tính năng như autoplay, navigation,
+          pagination, draggable, loop, và hiệu ứng chuyển động tùy chỉnh.
+        </p>
+        <h3>Đặc điểm nổi bật</h3>
+        <ul class="list-content">
+          <li>
+            <strong>Nhẹ và nhanh:</strong> Lopza.js chỉ ~9KB, không yêu cầu thư
+            viện phụ thuộc nào.
+          </li>
+          <li>
+            <strong>Tích hợp linh hoạt:</strong> Hoạt động tốt với mọi dự án và
+            framework mà không cần cấu hình phức tạp.
+          </li>
+          <li>
+            <strong>Tùy biến cao:</strong> Dễ dàng điều chỉnh hành vi, hiệu ứng
+            chuyển động và các tùy chọn như autoplay, loop, direction,
+            draggable, v.v.
+          </li>
+          <li>
+            <strong>CSS dễ dàng tùy chỉnh:</strong> Thiết kế slider theo phong
+            cách riêng mà không cần chỉnh sửa mã nguồn chính của thư viện.
+          </li>
+          <li>
+            <strong>Thân thiện với lập trình viên:</strong> Cung cấp callback rõ
+            ràng, giúp dễ dàng kiểm soát sự kiện chuyển slide và mở rộng tính
+            năng theo nhu cầu dự án.
+          </li>
+        </ul>
 
-    <!-- Slide 3 -->
-    <div class="box-container">
-      <div id="my-sli3"></div>
-    </div>
-    <div id="current-slide">Slide: 1</div>
-    <!-- Lopza JS -->
-    <script src="./src/lopza-my-min.js"></script>
+        <!-- Demos -->
+        <h3 data-title="#3">Demo tổng quan</h3>
 
-    <!-- Main JS -->
+        <!-- Slider Demo 1 -->
+      </div>
+
+      <!-- Section Demo Detail -->
+      <div class="content-card">
+        <h2 data-title="#2">Demo chi tiết</h2>
+
+        <!-- Slider Demo 2 -->
+
+        <!-- Slider Demo 3 -->
+
+        <!-- Slider Demo 4 -->
+      </div>
+
+      <!-- Setting -->
+      <div class="content-card" id="setting">
+        <h2 data-title="#3">Cài đặt</h2>
+        <p>Thêm đoạn code sau vào trước thẻ đóng <code>body</code></p>
+
+        <!-- Highlight Code -->
+        <!-- JS -->
+        <div class="content-code">
+          <div class="content-code__row">
+            <span class="content-code__title">html</span>
+            <button class="content-code__btn">
+              <img
+                src="./assets/icon/copy.svg"
+                alt=""
+                class="content-code__btn-icon"
+              />
+              Sao chép
+            </button>
+          </div>
+          <!-- Mẫu code cần highlight -->
+          <pre><code class="language-html">
+&lt;script src="https://cdn.jsdelivr.net/gh/devcui3107/lopza/lopza.min.js"&gt;&lt;/script&gt;
+          </code></pre>
+        </div>
+      </div>
+
+      <!-- Callback -->
+      <div class="content-card" id="callback">
+        <h2 data-title="#4">Callback</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Tham Số</th>
+              <th>Mô Tả</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><code>prevIndex</code></td>
+              <td>
+                Vị trí (chỉ số) của tab trước đó. Nếu là lần đầu tiên mở tab
+                (không có tab trước), giá trị sẽ là <code>null</code>.
+              </td>
+            </tr>
+            <tr>
+              <td><code>nextIndex</code></td>
+              <td>Vị trí (chỉ số) của tab hiện tại mà người dùng đã chọn.</td>
+            </tr>
+            <tr>
+              <td><code>prevTab</code></td>
+              <td>
+                Phần tử HTML của tab-item trước đó. Nếu là lần đầu tiên mở tab
+                (không có tab trước), giá trị sẽ là <code>null</code>.
+              </td>
+            </tr>
+            <tr>
+              <td><code>nextTab</code></td>
+              <td>Phần tử HTML của tab-item hiện tại mà người dùng đã chọn.</td>
+            </tr>
+            <tr>
+              <td><code>prevPanel</code></td>
+              <td>
+                Phần tử HTML của tab-panel trước đó. Nếu là lần đầu tiên mở tab
+                (không có panel trước), giá trị sẽ là <code>null</code>.
+              </td>
+            </tr>
+            <tr>
+              <td><code>nextPanel</code></td>
+              <td>
+                Phần tử HTML của tab-panel hiện tại tương ứng với tab người dùng
+                đã chọn.
+              </td>
+            </tr>
+            <tr>
+              <td><code>tabContainer</code></td>
+              <td>
+                Phần tử HTML của toàn bộ container chứa danh sách tab-item và
+                tab-panel.
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <!-- Effect -->
+      <div class="content-card" id="effect">
+        <h2 data-title="#5">Hiệu ứng</h2>
+        <!-- Highlight Code -->
+        <p>
+          Để áp dụng hiệu ứng chuyển tiếp cho nội dung của các tab, bạn cần tạo
+          các keyframes như ví dụ bên dưới và thêm chúng vào các lớp CSS của
+          phần tử chứa nội dung tab.
+        </p>
+        <!-- JS -->
+        <div class="content-code">
+          <div class="content-code__row">
+            <span class="content-code__title">css</span>
+            <button class="content-code__btn">
+              <img
+                src="./assets/icon/copy.svg"
+                alt=""
+                class="content-code__btn-icon"
+              />
+              Sao chép
+            </button>
+          </div>
+          <!-- Mẫu code cần highlight -->
+          <pre><code class="language-css">.tab-panel { /* class có thể là tên khác trong dự án của bạn*/
+  animation: fadeIn 0.3s ease-in-out;
+}
+/* Animation cho nội dung */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+/* Thêm các Animation khác tại đây ...*/</code></pre>
+        </div>
+      </div>
+
+      <!-- Usage -->
+      <div class="content-card" id="usage">
+        <h2 data-title="#6">HD sử dụng</h2>
+        <!-- Highlight Code -->
+        <!-- JS -->
+        <div class="content-code">
+          <div class="content-code__row">
+            <span class="content-code__title">javascript</span>
+            <button class="content-code__btn">
+              <img
+                src="./assets/icon/copy.svg"
+                alt=""
+                class="content-code__btn-icon"
+              />
+              Sao chép
+            </button>
+          </div>
+          <!-- Mẫu code cần highlight -->
+          <pre><code class="language-javascript">new Tabza("#tabs-container", {
+  activeTab: 2, // Tab mặc định được chọn là tab thứ hai (bắt đầu từ 0)
+  activeClass: "custom-active", // Đặt class để css các nút tab-item khi được active
+  useLS: false, // Mặc định true: cho phép lưu tab-active ở Local Storage
+  useHash: true,
+  action:()=>{} // Có 7 tham số xem HD ở #4. Callback
+  // VD: Cách lấy 1 đối số nhanh
+  // action: (...args) => {
+   // const container = args[5];
+    // console.log(container);
+  // },
+  // Bỏ qua đối số không dùng bằng cách truyền dấu _
+});
+</code></pre>
+        </div>
+
+        <!-- Chú ý -->
+        <p><mark>Chú ý:</mark> Hướng dẫn CSS đúng cách.</p>
+        <p>Dưới đây là hướng dẫn về cách tùy chỉnh CSS cho các phần tử tab:</p>
+        <blockquote>
+          <p>
+            <strong>CSS cho nội dung tab:</strong> Bạn có thể tùy chỉnh CSS cho
+            các phần tử chứa nội dung tab như bình thường. VD bên dưới là
+            <code>tab-panels</code> và <code>tab-panel</code>
+          </p>
+          <p>
+            <strong>CSS cho <code>tab-item</code> ở trạng thái active:</strong>
+            Để thay đổi lớp CSS cho <code>tab-item</code> khi nó ở trạng thái
+            active, bạn cần khai báo class này trong quá trình khởi tạo tab
+            thông qua tùy chọn <code>activeClass</code>, ví dụ:
+            <code>activeClass: "custom-active"</code>. Bạn có thể thay đổi tên
+            lớp này theo ý muốn.
+          </p>
+        </blockquote>
+
+        <p>
+          Class <code>custom-active</code> được khởi tạo từ
+          <code>activeClass</code> sẽ xuất hiện như ví dụ bên dưới. Nó biểu thị
+          cho trạng thái khi tab được chọn
+        </p>
+
+        <!-- Highlight Code -->
+        <!-- JS -->
+        <div class="content-code">
+          <div class="content-code__row">
+            <span class="content-code__title">html</span>
+            <button class="content-code__btn">
+              <img
+                src="./assets/icon/copy.svg"
+                alt=""
+                class="content-code__btn-icon"
+              />
+              Sao chép
+            </button>
+          </div>
+          <!-- Mẫu code cần highlight -->
+          <pre><code class="language-html">&lt;div id=&quot;tabs-demo-1&quot;&gt;
+&lt;div class=&quot;tab-list&quot;&gt;
+  &lt;button class=&quot;tab-item custom-active&quot; data-tab=&quot;tab-1&quot;&gt;Tab 1&lt;/button&gt;
+  &lt;button class=&quot;tab-item&quot; data-tab=&quot;tab-2&quot;&gt;Tab 2&lt;/button&gt;
+  &lt;button class=&quot;tab-item&quot; data-tab=&quot;tab-3&quot;&gt;Tab 3&lt;/button&gt;
+&lt;/div&gt;
+&lt;div class=&quot;tab-panels&quot;&gt;
+  &lt;div id=&quot;tab-1&quot; class=&quot;tab-panel&quot;&gt;
+    &lt;h4&gt;Nội dung Tab 1&lt;/h4&gt;
+    &lt;p&gt;Đây là nội dung của tab thứ nhất.&lt;/p&gt;
+  &lt;/div&gt;
+  &lt;div id=&quot;tab-2&quot; class=&quot;tab-panel&quot;&gt;
+    &lt;h4&gt;Nội dung Tab 2&lt;/h4&gt;
+    &lt;p&gt;Đây là nội dung của tab thứ hai.&lt;/p&gt;
+  &lt;/div&gt;
+  &lt;div id=&quot;tab-3&quot; class=&quot;tab-panel&quot;&gt;
+    &lt;h4&gt;Nội dung Tab 3&lt;/h4&gt;
+    &lt;p&gt;Đây là nội dung của tab thứ ba.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <p>&copy; 2025 - <strong>Lopza.js</strong> - Created by Devcui3107</p>
+      <p></p>
+    </footer>
+
+    <!-- Highlight Code -->
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
+
+    <!-- Plugin Autoloader -->
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+
+    <!-- Tự động tải ngôn ngữ cần thiết -->
+    <script>
+      Prism.plugins.autoloader.languages_path =
+        "https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/";
+    </script>
+
+    <!-- Lopza.js -->
+    <script src="https://cdn.jsdelivr.net/gh/devcui3107/lopza/lopza.min.js"></script>
+
+    <!-- JS Main -->
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
